prevent overflow of main title section

--- a/src/components/SolarSystem/styles.module.css
+++ b/src/components/SolarSystem/styles.module.css
@@ -11,13 +11,6 @@
   }
 }
 
-@media (max-width: 500px) {
-  .solarSystem {
-    margin-left: 0.5em;
-    margin-right: 0.5em;
-  }
-}
-
 .planet {
   position: absolute;
   width: 316px;
